@@ -4041,7 +4041,7 @@ int util_write_configfile(void)
         );
   }
 
-  if (menu_reopen_background_windows_on_start.v) ADD_STRING_CONFIG,"--enable-restore-windows");
+  if (menu_reopen_background_windows_on_start.v==0) ADD_STRING_CONFIG,"--disable-restore-windows");
 			
 
   if (menu_allow_background_windows && menu_reopen_background_windows_on_start.v) {
